Updated application description.

--- a/WebTextEditor/Views/Home/_Documents.cshtml
+++ b/WebTextEditor/Views/Home/_Documents.cshtml
@@ -6,7 +6,7 @@
             <p>Authored: {{document.userId}}</p>
             <p>Created: {{document.created}}</p>
             <p>
-                <a class="btn btn-default" href="/documents/{{document.id}}">Edit document &raquo;</a>
+                <a class="btn btn-warning" href="/documents/{{document.id}}">Edit document &raquo;</a>
             </p>
         </div>
     </div>
