--- a/WebTextEditor/Views/Home/_Document.cshtml
+++ b/WebTextEditor/Views/Home/_Document.cshtml
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-md-8">
             <form class="editor">
-                <textarea id="editor" class="form-control input-lg" rows="10" ng-model="vm.document.text" e-caret="caretPosition"></textarea>
+                <textarea id="editor" class="form-control input-lg" rows="10" ng-bind="vm.text.str" e-caret="caretPosition"></textarea>
                 <div class="carets" ng-repeat="(id, data) in vm.collaborators">
                     <div e-input-element="#editor"
                          e-input-caret="data.caret"
