--- a/WebTextEditor/Views/Home/_Document.cshtml
+++ b/WebTextEditor/Views/Home/_Document.cshtml
@@ -1,21 +1,25 @@
 ﻿<script type="text/ng-template" id="editor.document.html">
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <h2>{{vm.document.name}}</h2>
-        </div>
-        <div class="col-md-4">
-            <h4>Caret position: {{caretPosition.start}} - {{caretPosition.end}}</h4>
         </div>
     </div>
     <div class="row">
         <div class="col-md-8">
             <form class="editor">
-                <textarea id="editor" class="form-control input-lg" rows="10" ng-bind="vm.text.str" e-caret="caretPosition"></textarea>
+                <textarea id="editor" rows="10"
+                          class="form-control input-lg"
+                          e-caret="vm.caret"
+                          ng-cut="vm.cut()"
+                          ng-paste="vm.paste($event)"
+                          ng-keypress="vm.keypress($event)"
+                          ng-keydown="vm.keydown($event)"
+                          ng-model="vm.text"></textarea>
                 <div class="carets" ng-repeat="(id, data) in vm.collaborators">
                     <div e-input-element="#editor"
-                         e-input-caret="$parent.caretPosition.start"
-                         e-caret-name="{{data.name}}"
+                         e-input-caret="data.caretPosition"
+                         e-caret-name="{{data.userId}}"
                          e-caret-color="{{data.color}}" />
                 </div>
             </form>
@@ -23,8 +27,10 @@
         <div class="col-md-4">
             <h3 class="nopadding">Collaborators</h3>
             <div ng-repeat="(id, data) in vm.collaborators">
-                <div class="bs-callout" ng-style="{'border-left-color': data.color}">
-                    <h5>{{data.name}}</h5>
+                <div class="bs-callout"
+                     ng-style="{'border-left-color': data.color, }"
+                     ng-class="{'alert-warning': vm.connectionId == data.connectionId}">
+                    <h5>{{data.userId}}</h5>
                 </div>
             </div>
         </div>
