Added parameters.xml for WebDeploy

--- a/WebTextEditor/Views/Home/_Home.cshtml
+++ b/WebTextEditor/Views/Home/_Home.cshtml
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-md-4">
             <h2>Server-side</h2>
-            <p>Apllication server powered by ASP.NET and uses following framework parts:</p>
+            <p>Application server powered by ASP.NET and uses following framework parts:</p>
             <ul>
                 <li>MVC - for static content delivery.</li>
                 <li>Web API - for RESTful data endpoints.</li>
