#1 Add automatic height for textarea

--- a/WebTextEditor/Views/Home/_Document.cshtml
+++ b/WebTextEditor/Views/Home/_Document.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-8">
             <form class="editor">
                 <textarea id="editor" rows="10"
-                          class="form-control input-lg"
+                          class="form-control input-lg msd-elastic"
                           e-caret="vm.caret"
                           ng-cut="vm.cut($event)"
                           ng-paste="vm.paste($event)"
