#2 Add "new document" button into documents page Removed parameters for Web deploy

--- a/WebTextEditor/Content/css/site.css
+++ b/WebTextEditor/Content/css/site.css
@@ -89,3 +89,9 @@
 .carets .cursor.hover .name {
     display: block;
 }
+
+.new-document {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+}
