--- a/WebTextEditor/Views/Home/Index.cshtml
+++ b/WebTextEditor/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     @Html.Partial("_Home")
     @Html.Partial("_Document")
     @Html.Partial("_Documents")
+    @Html.Partial("_RenameDocument")
     <div ng-view></div>
 }
 
