--- a/WebTextEditor/Views/Home/_Documents.cshtml
+++ b/WebTextEditor/Views/Home/_Documents.cshtml
@@ -1,6 +1,6 @@
 ﻿<script type="text/ng-template" id="editor.documents.html">
 
-    <div class="row">
+    <div class="row ng-hide animate-show" ng-show="!vm.isLoading">
         <div ng-repeat="document in vm.documents" class="col-md-4">
             <h3><a href="/documents/{{document.id}}">{{document.name}}</a></h3>
             <p>Authored: {{document.userId}}</p>
@@ -13,14 +13,15 @@
                 </a>
             </p>
         </div>
-        <div class="col-md-12">
-            <h3 class="ng-hide" ng-show="vm.documents.length === 0 && !vm.isLoading">
-                No documents, please create a new one.
-            </h3>
-            <h3 ng-show="vm.isLoading">Loading documents...</h3>
+        <div class="col-md-12 ng-hide" ng-show="vm.documents.length === 0">
+            <h3>No documents, please create a new one.</h3>
         </div>
     </div>
     
+    <div class="row" ng-show="vm.isLoading">
+        <div class="loader center-block">Loading...</div>
+    </div>
+
     <div class="new-document">
         <a class="btn btn-primary btn-lg" href="" ng-click="vm.addDocument()" title="Create a new document">
             New Document
