Added Logoot specification.

--- a/WebTextEditor/Views/Jasmine/SpecRunner.cshtml
+++ b/WebTextEditor/Views/Jasmine/SpecRunner.cshtml
@@ -14,12 +14,11 @@
   <script type="text/javascript" src="/Scripts/jasmine/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="/Scripts/jasmine-samples/SpecHelper.js"></script>
-  <script type="text/javascript" src="/Scripts/jasmine-samples/PlayerSpec.js"></script>
+  <script type="text/javascript" src="/Scripts/EventEmitter.js"></script>
+  <script type="text/javascript" src="/Scripts/logoot.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="/Scripts/jasmine-samples/Player.js"></script>
-  <script type="text/javascript" src="/Scripts/jasmine-samples/Song.js"></script>
+  <script type="text/javascript" src="/Tests/LogootSpec.js"></script>
 </head>
 
 <body>
